fix overflow error in firefox due to 3d faces being positioned relative instead of absolute

--- a/main.css
+++ b/main.css
@@ -101,7 +101,7 @@ img {
     }
 }
 #landing {
-    position: relative;
+    position: absolute;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -128,6 +128,8 @@ img {
 }
 
 #home {
+    position: absolute;
+    top: 100%;
     filter: drop-shadow(0 0 20px #13151f);
     padding: 2rem;
     color: white;
